--- a/husky_bringup/package.xml
+++ b/husky_bringup/package.xml
@@ -29,6 +29,7 @@
   <exec_depend>urg_node</exec_depend>
   <exec_depend>velodyne_driver</exec_depend>
   <exec_depend>velodyne_pointcloud</exec_depend>
+  <exec_depend>microstrain_inertial_driver</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
