--- a/husky_bringup/config/realsense.yaml
+++ b/husky_bringup/config/realsense.yaml
@@ -19,6 +19,12 @@ camera_front:
       camera_name: camera_front
       serial_no: _031422250398
 
+camera_top_front:
+  realsense2_camera_node:
+    ros__parameters:
+      camera_name: camera_top_front
+      serial_no: _117322071656
+
 camera_left:
   realsense2_camera_node:
     ros__parameters:
