--- a/husky_bringup/package.xml
+++ b/husky_bringup/package.xml
@@ -30,6 +30,9 @@
   <exec_depend>velodyne_driver</exec_depend>
   <exec_depend>velodyne_pointcloud</exec_depend>
   <exec_depend>microstrain_inertial_driver</exec_depend>
+  <exec_depend>compressed_image_transport</exec_depend>
+  <exec_depend>compressed_depth_image_transport</exec_depend>
+
 
   <export>
     <build_type>ament_cmake</build_type>
