--- a/husky_bringup/config/microstrain_gx5.yaml
+++ b/husky_bringup/config/microstrain_gx5.yaml
@@ -27,11 +27,11 @@ microstrain:
       #
       # filter_frame_id and filter_child_frame_id are specifically useful as the node will also publish a transform to the /tf topic
       # that contains the transform between these two frames. Many ROS tools such as RViz will use the /tf topic to display things like robot position.
-      imu_frame_id          : "imu_link"
+      imu_frame_id          : "imu_link" # "imu_sensor"
       gnss1_frame_id        : "gnss1_antenna_wgs84"
       gnss2_frame_id        : "gnss2_antenna_wgs84"
-      filter_frame_id       : "sensor_wgs84"
-      filter_child_frame_id : "imu_link" # "sensor"
+      filter_frame_id       : "imu_link"
+      filter_child_frame_id : "sensor"
       nmea_frame_id         : "nmea"
 
       # Waits for a configurable amount of time until the device exists
@@ -117,66 +117,6 @@ microstrain:
       publish_gps_corr : False
 
       # ****************************************************************** 
-      # GNSS Settings (only applicable for devices with GNSS) 
-      # ****************************************************************** 
-      publish_gnss1   : False
-      gnss1_data_rate : 2
-
-      # The speed at which the individual GNSS1 publishers will publish at.
-      #      If set to -1, will use gnss1_data_rate to determine the rate at which to stream and publish
-      #      If set to 0, the stream will be turned off and the publisher will not be created
-      #
-      #      Note: The parameters' "gnss1_nav_sat_fix_data_rate", "gnss1_odom_data_rate" associated ROS messages share several MIP fields,
-      #            so if more than one is set to stream, and they are set to stream at different rates, messages will be published on both topics, at the higher rate
-      gnss1_nav_sat_fix_data_rate    : -1  # Rate of gnss1/fix topic
-      gnss1_odom_data_rate           : -1  # Rate of gnss1/odom topic
-      gnss1_time_reference_data_rate : -1  # Rate of gnss1/time_ref topic
-      gnss1_fix_info_data_rate       : -1  # Rate of gnss1/fix_info topic
-
-      # Antenna #1 lever arm offset vector
-      #     For GQ7 - in the vehicle frame wrt IMU origin (meters)
-      #     For all other models - in the IMU frame wrt IMU origin (meters)
-      #     Note: Make this as accurate as possible for good performance
-      gnss1_antenna_offset : [0.0, -0.7, -1.0]
-
-      # GNSS2 settings are only applicable for multi-GNSS systems (e.g. GQ7) 
-      publish_gnss2   : False
-      gnss2_data_rate : 2
-
-      # The speed at which the individual GNSS2 publishers will publish at.
-      #      If set to -1, will use gnss2_data_rate to determine the rate at which to stream and publish
-      #      If set to 0, the stream will be turned off and the publisher will not be created
-      #
-      #      Note: The parameters' "gnss2_nav_sat_fix_data_rate", "gnss2_odom_data_rate" associated ROS messages share several MIP fields,
-      #            so if more than one is set to stream, and they are set to stream at different rates, messages will be published on both topics, at the higher rate
-      gnss2_nav_sat_fix_data_rate    : -1  # Rate of gnss2/fix topic
-      gnss2_odom_data_rate           : -1  # Rate of gnss2/odom topic
-      gnss2_time_reference_data_rate : -1  # Rate of gnss2/time_ref topic
-      gnss2_fix_info_data_rate       : -1  # Rate of gnss2/fix_info topic
-
-      # Antenna #2 lever arm offset vector (In the vehicle frame wrt IMU origin (meters) )
-      #Note: Make this as accurate as possible for good performance 
-      gnss2_antenna_offset : [0.0, 0.7, -1.0]
-
-      # (GQ7 Only) Enable RTK dongle interface
-      # Note: Enabling this will cause the node to publish on one of two topics depending
-      #   on the version of the RTK dongle connected to the GQ7
-      rtk_dongle_enable : False
-
-      # The speed at which the individual RTK publishers will publish at.
-      #      If set to -1, will publish at 1 hz which was the default before allowing users to configure this rate
-      #      If set to 0, the stream will be turned off and the publisher will not be created
-      rtk_status_data_rate : -1  # Rate of rtk/status or rtk/status_v1 topics
-                                # Note that this is still reliant on rtk_dongle_enable being set to true to publish
-
-      # (GQ7 Only) Allow the user to send RTCM messages to this node, and stream those messages to the GQ7
-      subscribe_rtcm : False
-      rtcm_topic     : "/rtcm"
-
-      # (GQ7 Only) Send NMEA sentences from the aux port out on a ROS topic
-      publish_nmea   : False
-
-      # ****************************************************************** 
       # Kalman Filter Settings (only applicable for devices with a Kalman Filter) 
       # ****************************************************************** 
 
@@ -210,10 +150,10 @@ microstrain:
       #            The different options are provided as a convenience.
       #            Support for matrix and quaternion options is firmware version dependent (GQ7 supports Quaternion as of firmware 1.0.07)
       #            Quaternion order is [i, j, k, w]
-      filter_sensor2vehicle_frame_selector : 1
+      filter_sensor2vehicle_frame_selector : 2
 
       filter_sensor2vehicle_frame_transformation_euler      : [0.0, 0.0, 0.0]
-      filter_sensor2vehicle_frame_transformation_matrix     : [1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0]
+      filter_sensor2vehicle_frame_transformation_matrix     : [0.0, 1.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, -1.0]
       filter_sensor2vehicle_frame_transformation_quaternion : [0.0, 0.0, 0.0, 1.0]
 
         # Controls if the Kalman filter is reset after the settings are configured
@@ -223,8 +163,8 @@ microstrain:
       filter_auto_init : True
 
       # (All, except -10, and -15 products) Declination Source 1 = None, 2 = magnetic model, 3 = manual 
-      filter_declination_source : 2
-      filter_declination        : 0.23
+      filter_declination_source : 3
+      filter_declination        : 0.053953712
 
       # (All, except GQ7, -10, and -15 products) Heading Source 0 = None, 1 = magnetic, 2 = GNSS velocity (note: see manual for limitations)  
       filter_heading_source : 1
@@ -237,8 +177,8 @@ microstrain:
       filter_use_compensated_accel : True
 
       # ZUPT control 
-      filter_velocity_zupt_topic : "/moving_vel"
-      filter_angular_zupt_topic  : "/moving_ang"
+      filter_velocity_zupt_topic : "moving_vel"
+      filter_angular_zupt_topic  : "moving_ang"
       filter_velocity_zupt       : True
       filter_angular_zupt        : True
 
@@ -248,153 +188,9 @@ microstrain:
       filter_adaptive_level         : 2
       filter_adaptive_time_limit_ms : 15000
 
-      # (GQ7 only) Aiding measurement control 
-      filter_enable_gnss_pos_vel_aiding     : True
-      filter_enable_gnss_heading_aiding     : True
-      filter_enable_altimeter_aiding        : False
-      filter_enable_odometer_aiding         : False
-      filter_enable_magnetometer_aiding     : False
-      filter_enable_external_heading_aiding : False
-
-      #  External GPS Time Update Control
-      #      Notes:    filter_external_gps_time_topic should publish at no more than 1 Hz.
-      #                gps_leap_seconds should be updated to reflect the current number
-      #                of leap seconds.
-      filter_enable_external_gps_time_update : False
-      filter_external_gps_time_topic         : "/external_gps_time"
-      gps_leap_seconds                       : 18.0
-
-      # External Speed Control. This node will subscribe on this topic only if filter_enable_odometer_aiding is set to true
-      #      Notes: This subscription will be disabled if enable_hardware_odometer is set to true
-      filter_external_speed_topic : "/external_speed"
-
-      # Velocity frame control.
-      #      If set to false, the velocity will be reported in the NED/ENU frame
-      #      If set to true, the velocity will be reported in the vehicle frame
-      filter_vel_in_vehicle_frame : False
-
-      # Hardware Odometer Control
-      enable_hardware_odometer : False
-      odometer_scaling         : 0.0
-      odometer_uncertainty     : 0.0
 
 
-      #  (GQ7 only) GPIO Configuration
-      #    Notes:    For information on possible configurations and specific pin options
-      #              refer to the MSCL MipNodeFeatures command, supportedGpioConfigurations.
-      #
-      #    GPIO Pins =
-      #    1 - GPIO1 (primary port pin 7) - Features = 0 - Unused, 1 - GPIO, 2 - PPS, 3 - Encoder
-      #    2 - GPIO2 (primary port pin 9) - Features = 0 - Unused, 1 - GPIO, 2 - PPS, 3 - Encoder
-      #    3 - GPIO3 (aux port pin 7)     - Features = 0 - Unused, 1 - GPIO, 2 - PPS, 3 - Encoder
-      #    4 - GPIO4 (aux port pin 9)     - Features = 0 - Unused, 1 - GPIO, 2 - PPS, 3 - Encoder
-      #
-      #    Feature:
-      #    0 - Unused   - Behaviors = 0 - unused
-      #    1 - GPIO     - Behaviors = 0 - unused, 1 - input, 2 - output low, 3 - output high
-      #    2 - PPS      - Behaviors = 0 - unused, 1 - input, 2 - output
-      #    3 - Encoder  - Behaviors = 0 - unused, 1 - enc A, 2 - enc B
-      #
-      #    GPIO Behavior:
-      #    0 - Unused
-      #    1 - Input
-      #    2 - Output Low
-      #    3 - Output High
-      #
-      #    PPS Behavior:
-      #    0 - Unused
-      #    1 - Input
-      #    2 - Output
-      #
-      #    Encoder Behavior:
-      #    0 - Unused
-      #    1 - Encoder A
-      #    2 - Encoder B
-      #
-      #    Pin Mode Bitfield:
-      #    1 - open drain
-      #    2 - pulldown
-      #    4 - pullup
-      gpio1_feature  : 0
-      gpio1_behavior : 0
-      gpio1_pin_mode : 0
 
-      gpio2_feature  : 0
-      gpio2_behavior : 0
-      gpio2_pin_mode : 0
 
-      gpio3_feature  : 0
-      gpio3_behavior : 0
-      gpio3_pin_mode : 0
 
-      gpio4_feature  : 0
-      gpio4_behavior : 0
-      gpio4_pin_mode : 0
 
-      gpio_config    : False
-
-      # (GQ7 only) Filter Initialization control
-
-      #   Init Condition source =
-      #   0 - auto pos, vel, attitude (default)
-      #   1 - auto pos, vel, roll, pitch, manual heading
-      #   2 - auto pos, vel, manual attitude
-      #   3 - manual pos, vel, attitude
-      #
-      #   Auto-Heading alignment selector (note this is a bitfield, you can use more than 1 source) =
-      #   Bit 0 - Dual-antenna GNSS
-      #   Bit 1 - GNSS kinematic (requires motion, e.g. a GNSS velocity)
-      #   Bit 2 - Magnetometer
-      #
-      #   Reference frame =
-      #   1 - WGS84 Earth-fixed, earth centered (ECEF) position, velocity, attitude
-      #   2 - WGS84 Latitude, Longitude, height above ellipsoid position, NED velocity and attitude
-      filter_init_condition_src              : 0
-      filter_auto_heading_alignment_selector : 1
-      filter_init_reference_frame            : 2
-      filter_init_position : [0.0, 0.0, 0.0]
-      filter_init_velocity : [0.0, 0.0, 0.0]
-      filter_init_attitude : [0.0, 0.0, 0.0]
-
-      # (GQ7 only) Relative Position Configuration
-      #   Reference frame =
-      #   1 - Relative ECEF position
-      #   2 - Relative LLH position
-      #
-      #   Reference position - Units provided by reference frame (ECEF - meters, LLH - deg, deg, meters)
-      #   Note: prior to firmware version 1.0.06 this command will fail for non-positive heights.  1.0.06 fixes this)
-      publish_relative_position      : False
-      filter_relative_position_frame : 2
-      filter_relative_position_ref   : [0.0, 0.0, 0.01]
-
-      # (GQ7 only) Speed Lever Arm Configuration
-      #   Lever Arm - In vehicle reference frame (meters)
-      filter_speed_lever_arm : [0.0, 0.0, 0.0]
-
-      # (GQ7 only) Wheeled Vehicle Constraint Control
-      #    Note: When enabled, the filter uses the assumption that velocity is constrained to the primary vehicle axis.
-      #          By convention, the primary vehicle axis is the vehicle X-axis
-      filter_enable_wheeled_vehicle_constraint : False
-
-      # (GQ7 only) Vertical Gyro Constraint Control
-      #    Note: When enabled and no valid GNSS measurements are available, the filter uses the accelerometers to track
-      #          pitch and roll under the assumption that the sensor platform is not undergoing linear acceleration.
-      #          This constraint is useful to maintain accurate pitch and roll during GNSS signal outages.
-      filter_enable_vertical_gyro_constraint : False
-
-      # (GQ7 only) GNSS Antenna Calibration Control
-      #Note: When enabled, the filter will enable lever arm error tracking, up to the maximum offset specified in meters.
-      filter_enable_gnss_antenna_cal     : False
-      filter_gnss_antenna_cal_max_offset : 0.1
-
-      # (GQ7 only) PPS Source
-      #    PPS Source =
-      #    0 - Disabled
-      #    1 - Reciever 1 (default)
-      #    2 - Reciever 2
-      #    3 - Generated from system oscillator
-      #    4 - GPIO 1 (provided by external source if supported)
-      #    5 - GPIO 2 (provided by external source if supported)
-      #    6 - GPIO 3 (provided by external source if supported)
-      #    7 - GPIO 4 (provided by external source if supported)
-      filter_pps_source : 1
