add realsense config file

--- a/husky_bringup/config/realsense.yaml
+++ b/husky_bringup/config/realsense.yaml
@@ -1,17 +1,18 @@
 /**:
   realsense2_camera_node:
     ros__parameters:
+      initial_reset: true
       enable_sync: true
       enable_color: true
       rgb_camera.profile: 640,480,30
       enable_depth: true
-      depth_module.profile: 640,480,30
+      depth_module.profile: 640,480,15
       align_depth.enable: true
-      pointcloud.enable: true
+      pointcloud.enable: false
       pointcloud.allow_no_texture_points: true
-      pointcloud.stream_filter: 2
-      allow_no_texture_points: true
+      pointcloud.stream_filter: 0
       rgb_camera.power_line_frequency: 0
+      # hole_filling_filter.enable: true
 
 camera_front:
   realsense2_camera_node:
