--- a/husky_viz/package.xml
+++ b/husky_viz/package.xml
@@ -23,6 +23,25 @@
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>joint_state_publisher_gui</exec_depend>
   <exec_depend>rviz2</exec_depend>
+  <exec_depend>rqt</exec_depend>
+  <exec_depend>rqt_gui</exec_depend>
+  <exec_depend>rqt_gui_cpp</exec_depend>
+  <exec_depend>rqt_gui_py</exec_depend>
+  <exec_depend>rqt_console</exec_depend>
+  <exec_depend>rqt_image_overlay</exec_depend>
+  <exec_depend>rqt_image_view</exec_depend>
+  <exec_depend>rqt_msg</exec_depend>
+  <exec_depend>rqt_reconfigure</exec_depend>
+  <exec_depend>rqt_robot_monitor</exec_depend>
+  <exec_depend>rqt_robot_dashboard</exec_depend>
+  <exec_depend>rqt_robot_steering</exec_depend>
+  <exec_depend>rqt_controller_manager</exec_depend>
+  <exec_depend>rqt_runtime_monitor</exec_depend>
+  <exec_depend>rqt_tf_tree</exec_depend>
+  <exec_depend>microstrain_inertial_rqt</exec_depend>
+
+
+
   <!-- <exec_depend>rviz_imu_plugin</exec_depend> -->
 
   <depend>launch_ros</depend>
