--- a/husky_bringup/config/microstrain_gx5.yaml
+++ b/husky_bringup/config/microstrain_gx5.yaml
@@ -27,7 +27,7 @@ microstrain:
       #
       # filter_frame_id and filter_child_frame_id are specifically useful as the node will also publish a transform to the /tf topic
       # that contains the transform between these two frames. Many ROS tools such as RViz will use the /tf topic to display things like robot position.
-      imu_frame_id          : "imu_link" # "imu_sensor"
+      imu_frame_id          : "imu_link"
       gnss1_frame_id        : "gnss1_antenna_wgs84"
       gnss2_frame_id        : "gnss2_antenna_wgs84"
       filter_frame_id       : "imu_link"
@@ -150,7 +150,7 @@ microstrain:
       #            The different options are provided as a convenience.
       #            Support for matrix and quaternion options is firmware version dependent (GQ7 supports Quaternion as of firmware 1.0.07)
       #            Quaternion order is [i, j, k, w]
-      filter_sensor2vehicle_frame_selector : 2
+      filter_sensor2vehicle_frame_selector : 0
 
       filter_sensor2vehicle_frame_transformation_euler      : [0.0, 0.0, 0.0]
       filter_sensor2vehicle_frame_transformation_matrix     : [0.0, 1.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, -1.0]
